# spimex-app-FastAPI

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yml
app/: config.py  database.py  main.py
app/api/: models.py  repository.py  routes.py  schemas.py  unit_of_work.py
app/api/api_services/: check_and_update_service.py  dynamics_service.py  last_trading_dates_service.py  trade_result_service.py
app/api/routers/: __init__.py  check_and_update_router.py  dynamics_router.py  last_trading_dates_router.py  trade_result_router.py
app/api/routes/: check_and_update_route.py
app/api/scemas/: check_and_update_scemas.py  dynamics_scemas.py  error_scemas.py  last_trading_dates_scemas.py  trade_result_scemas.py
app/api/schemas/: dynamics_schemas.py  error_schemas.py  last_trading_dates_schemas.py  trade_result_schemas.py
app/parser/: save_data.py  scrapping.py
app/tests/: conftest.py  fixtures.py  test_add_data.py  test_dynamics.py  test_last_trading_dates.py  test_trade_result.py
app/tests/celery_tests/: test_celery_beat.py
app/tests/endpoints_tests/: test_add_data.py  test_dynamics.py  test_last_trading_dates.py  test_trade_result.py
app/utils/: base_repository.py  base_service.py
app/worker/: notify.py
docker/: app.sh  celery.sh
migrations/: env.py
migrations/versions/: 8bb3e681572d_initial.py
parser/: download_files.py  save_data.py  scrapping.py
tests/: conftest.py  test_add_data.py  test_dynamics.py  test_last_trading_dates.py  test_trade_result.py
worker/: notify.py  tasks.py
(+19 files in other folders)
